package adapterPattern.robotBuilder.enums;

//Tools we have

public enum ToolEnum {

	Hammer,
	Screwdriver,
	ImbusKey,
	NailsPackOf5,
	ScrewsPackOf7,
	ScrewsPackOf4
}